--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistDialog.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistDialog.xhtml
@@ -14,6 +14,7 @@
 <ui:composition
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dialog widgetVar="hitlist"
               id="hitlist"
@@ -29,9 +30,15 @@
                          rows="#{LoginForm.myBenutzer.tableSize}"
                          paginator="true">
                 <p:column headerText="#{msgs.hits}">
-                    <p:commandLink value="#{hit.title}"
+                    <p:commandLink id="test"
+                                    value="#{hit.title}"
                                    onclick="PF('hitlist').hide()"
-                                   update="editForm"/>
+                                   update="editForm"
+                                   immediate="true"
+                                   action="#{ImportForm.getselectedRecord()}">
+                        <f:param name="ID" value="#{hit.id}"/>
+                        <f:setPropertyActionListener target="#{ImportForm.prozesskopieForm}" value="#{ProzesskopieForm}" />
+                    </p:commandLink>
                 </p:column>
             </p:dataTable>
         </h:form>
